# cli-manager

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: detailed-design.md  requirements.md
src/: main.rs
src/domain/: mod.rs
src/domain/model/: mod.rs  terminal.rs
src/domain/primitive/: cell.rs  ipc_command.rs  mod.rs  notification.rs  search_match.rs  terminal_id.rs  terminal_size.rs  terminal_status.rs
src/infrastructure/: mod.rs
src/infrastructure/clipboard/: mod.rs
src/infrastructure/ipc/: cli_client.rs  key_parser.rs  mod.rs  protocol.rs  socket_discovery.rs  unix_socket_server.rs
src/infrastructure/mcp/: mcp_server.rs  mod.rs  tool_definitions.rs  tool_handlers.rs
src/infrastructure/notification/: macos_notifier.rs  mod.rs
src/infrastructure/pty/: mod.rs  portable_pty_adapter.rs
src/infrastructure/screen/: mod.rs  osc7.rs  vt100_screen.rs  vte_screen.rs
src/infrastructure/tui/: app_runner.rs  fuzzy_matcher.rs  input.rs  mod.rs
src/infrastructure/tui/widgets/: dialog.rs  help_overlay.rs  layout.rs  memo_overlay.rs  mini_terminal_view.rs  mod.rs  quick_switcher.rs  search_bar.rs  sidebar.rs  terminal_view.rs
src/interface_adapter/: mod.rs
src/interface_adapter/adapter/: mod.rs  pty_adapter_factory.rs  screen_adapter_factory.rs
src/interface_adapter/controller/: mod.rs  tui_controller.rs
src/interface_adapter/port/: ipc_port.rs  mod.rs  pty_port.rs  screen_port.rs
src/shared/: error.rs
src/usecase/: mod.rs  terminal_usecase.rs
